--- a/Calculatrice/Calculatrice.html
+++ b/Calculatrice/Calculatrice.html
@@ -21,7 +21,7 @@
 		</form>
 		<table border="1">
 			<tr>
-				
+				<td><input class="bouton" type="button" value="<" onclick="effacerDernierElement()"></td>
 				<td><input class="bouton" type="button" value="(" onclick="taperNumero('(')"></td>
 				<td><input class="bouton" type="button" value=")" onclick="taperNumero(')')"></td>
 				<td><input class="bouton" type="button" value="/" onclick="taperNumero('/')"></td>
