--- a/Ninja/Ninja.html
+++ b/Ninja/Ninja.html
@@ -3,7 +3,7 @@
 <head>
 	<title>NinjaGame</title>
 	<meta charset="iso-8859-1" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script  src="jquery-2.1.4.min.js"></script>
 	<style type="text/css">
 		button{
