--- a/Ninja/Ninja.html
+++ b/Ninja/Ninja.html
@@ -3,7 +3,7 @@
 <head>
 	<title>NinjaGame</title>
 	<meta charset="iso-8859-1" />
-	<script  src="jquery-2.1.4.min.js"></script>
+	<script  src="jquery-3.3.1.js"></script>
 	<style type="text/css">
 		button{
 			position: absolute;
