First Website Upload

--- a/index.html
+++ b/index.html
@@ -73,16 +73,19 @@
           			</ul>
         		</li>
       		</ul>
-      		<ul class="nav navbar-nav">
-       			<li class="dropdown">
-          			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Séance 6<span class="caret"></span></a>
-          			<ul class="dropdown-menu">
-          				<li><a href="#">Nouveautés du HTML5</a></li>
-          			</ul>
-        		</li>
-      		</ul>
-      		</div>
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Nouveautés HTML5<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="./Nouveautés/Géolocalisation/Geolocalisation.html">Géolocalisation (avec traîtement d'erreur)</a></li>
+                  <li><a href="./Nouveautés/Drag_and_Drop/D&D.html">Le "Drag and Drop"</a></li>
+                  <li><a href="./Nouveautés/mediaQuery/Video.html">Balise Video</a></li>
+                  
+                </ul>
+            </li>
+          </ul>
       	</div>
+    </div>
 	</nav>
 	<div class="jumbotron vertical-center">
   		<div class="container">
