--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Page Web pour la Soutenance</title>
 	<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
+  <style type="text/css">
+    body{
+      background-color: #E4E4E4;
+    }
+  </style>
 	<script src="jquery-3.3.1.js"></script>
 	<script src="./bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 </head>
@@ -90,7 +95,7 @@
 	<div class="jumbotron vertical-center">
   		<div class="container">
     		<h1>Bienvenue!</h1>
-  			<p>Voici un simple site web personnel, crée en Bootstrap et hébergé avec GitHub, dans lequel on trouve tous les exercices du cette période.</p>
+  			<div><span><img class="ID" src="ID.png"></span><span><p>Voici un simple site web personnel, crée en Bootstrap et hébergé avec GitHub, dans lequel on trouve tous les exercices du cette période.</p></span></div>
   			<p><a class="btn btn-primary btn-lg" href="./CV/CV.html" role="button">À propos de moi</a></p>
  		</div>
 	</div>
