--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                   <li><a href="./Nouveautés/Géolocalisation/Geolocalisation.html">Géolocalisation (avec traîtement d'erreur)</a></li>
                   <li><a href="./Nouveautés/Drag_and_Drop/D&D.html">Le "Drag and Drop"</a></li>
                   <li><a href="./Nouveautés/mediaQuery/Video.html">Balise Video</a></li>
-                  
+                  <li><a href="./Nouveautés/Stockage/localStorage.html">Le "Local Storage"</a></li>
+                  <li><a href="./Nouveautés/Stockage/sessionStorage.html">Le "Session Storage"</a></li>
                 </ul>
             </li>
           </ul>
