--- a/CV/CV.html
+++ b/CV/CV.html
@@ -27,7 +27,7 @@
 		
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>e: <a href="http://www.enit.rnu.tn/" target="_blank">ENIT</a></li>
+				<li>e: <a href="https://www.enit.rnu.tn/" target="_blank">ENIT</a></li>
 				<li>a: Rue Béchir Salem Belkhiria Campus universitaire, BP 37, 1002, Le Bélvédère, 1002, Tunis</li>
 				<li>m: 01234567890</li>
 			</ul>
@@ -137,7 +137,7 @@
 			
 			<div class="sectionContent">
 				<form>
-					<input type="button" value="Télécharger en PDF" onclick="window.location.href='http://localhost:81/T%C3%A9l%C3%A9charger_PDF.php'" />
+					<input type="button" value="Télécharger en PDF" onclick="window.location.href='https://localhost:81/T%C3%A9l%C3%A9charger_PDF.php'" />
 				</form>
 			</div>
 			<div class="clear"></div>
@@ -146,7 +146,7 @@
 	</div>
 </div>
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "https://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
