--- a/CV/CV.html
+++ b/CV/CV.html
@@ -137,7 +137,7 @@
 			
 			<div class="sectionContent">
 				<form>
-					<input type="button" value="Télécharger en PDF" onclick="window.location.href='https://localhost:81/T%C3%A9l%C3%A9charger_PDF.php'" />
+					<input type="button" value="Télécharger en PDF" onclick="window.location.href='https://github.com/OmarBouaouina/OmarBouaouina.github.io/blob/master/CV/T%C3%A9l%C3%A9charger_PDF.php'" />
 				</form>
 			</div>
 			<div class="clear"></div>
