--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Nouveautés HTML5<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="./Nouveautés/Géolocalisation/Geolocalisation.html">Géolocalisation (avec traîtement d'erreur)</a></li>
+                  <li><a href="./Nouveautés/Géolocalisation/Geo.html">Géolocalisation (avec traîtement d'erreur)</a></li>
                   <li><a href="./Nouveautés/Drag_and_Drop/D&D.html">Le "Drag and Drop"</a></li>
                   <li><a href="./Nouveautés/mediaQuery/Video.html">Balise Video</a></li>
                   <li><a href="./Nouveautés/Stockage/localStorage.html">Le "Local Storage"</a></li>
