First Website Upload

--- a/Calculatrice/Calculatrice.html
+++ b/Calculatrice/Calculatrice.html
@@ -51,6 +51,8 @@
 			</tr>
 		</table>
 	</div>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>	
 	<script src="Calculatrice.js"></script>
 </body>
 </html>
