--- a/Envoi_du_CV/CV.html
+++ b/Envoi_du_CV/CV.html
@@ -142,9 +142,10 @@
 			</div>
 			<div class="clear"></div>
 		</section>
-		
 	</div>
 </div>
+<br><br><br>
+<p align="center"><a href="javascript:history.back()">Go Back</a></p>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "https://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
