--- a/Ex1-Ex12/exercice1/exercice1.html
+++ b/Ex1-Ex12/exercice1/exercice1.html
@@ -22,7 +22,9 @@
 	<p>
     <p id="paragraphe3">
 	  Tous les exercices sont corrigés en vidéo. Rendez-vous sur le site Web http://moneformation.fr pour accéder aux vidéos.
-    </p>	
+    </p>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>	
     <script>
       $(function() {
         $('#paragraphe1').css('color','red');
