--- a/Ex1-Ex12/exercice2/exercice2.html
+++ b/Ex1-Ex12/exercice2/exercice2.html
@@ -20,5 +20,7 @@
 	<div id="basdepage">
 	  Copyright (c) 2013
 	</div>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
   </body>
 </html>
