--- a/Formulaire Piquenique/piquenique.html
+++ b/Formulaire Piquenique/piquenique.html
@@ -38,6 +38,8 @@
 				<button>Soumettre</button>
 			</form>
 		</td>
-	</table>	
+	</table>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>	
 </body>
 </html>
