--- a/Ninja/Ninja.html
+++ b/Ninja/Ninja.html
@@ -41,6 +41,8 @@
 
 </table>
 <button>Play</button>
+<br><br><br>
+<p align="center"><a href="javascript:history.back()">Go Back</a></p>	
 <script>
 $('.toHide').hide();
 var bouton = document.querySelector("button");
