--- a/Nouveautés/Geolocalisation/Geo.html
+++ b/Nouveautés/Geolocalisation/Geo.html
@@ -50,6 +50,8 @@
 
 <body onload="initialize()">
   <div id="map_canvas"></div>
+  <br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
 </body>
 
 </html>
