--- a/Nouveautés/Stockage/localStorage.html
+++ b/Nouveautés/Stockage/localStorage.html
@@ -22,5 +22,7 @@ function clickCounter() {
 <p>Fermer le navigateur (ou l'onglet) et essayez de taper le bouton, vous allez voir que le compteur reprendra avec la dernière valeur.</p>
 <p><button onclick="clickCounter()" type="button">Click me!</button></p>
 <div id="result"></div>
+<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
 </body>
 </html>
