--- a/Ex1-Ex12/exercice3/exercice3.html
+++ b/Ex1-Ex12/exercice3/exercice3.html
@@ -24,6 +24,8 @@
       <span id="vertical">Vertical</span>
       <span id="copy">Copyright (c) 2013</span>
 	</div> 
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
     <script>
       $(function(){
         $('#uni').click(function(){
