--- a/Ex1-Ex12/exercice4/exercice4.html
+++ b/Ex1-Ex12/exercice4/exercice4.html
@@ -26,6 +26,8 @@
       <span id="texture">Texture</span>
       <span id="copy">Copyright (c) 2013</span>
 	</div> 
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
     <script>
       $(function(){
         $('#uni').click(function(){
