--- a/Ex1-Ex12/exercice5/exercice5.html
+++ b/Ex1-Ex12/exercice5/exercice5.html
@@ -25,7 +25,9 @@
       <span id="vertical">Vertical</span>
       <span id="texture">Texture</span>
       <span id="copy">Copyright (c) 2013</span>
-	</div> 
+	</div>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>	
     <script>
       $(function(){
         $('#uni').click(function(){
