--- a/Ex1-Ex12/exercice6/exercice6.html
+++ b/Ex1-Ex12/exercice6/exercice6.html
@@ -37,6 +37,8 @@
       <span id="texture">Texture</span>
       <span id="copy">Copyright (c) 2013</span>
 	</div> 
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
     <script>
       $(function(){
         $('#uni').click(function(){
