--- a/Nouveautés/Drag_and_Drop/D&D.html
+++ b/Nouveautés/Drag_and_Drop/D&D.html
@@ -38,5 +38,6 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <br>
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-
+<br><br><br>
+<p align="center"><a href="javascript:history.back()">Go Back</a></p>
 </body>
