--- a/Nouveautés/mediaQuery/Video.html
+++ b/Nouveautés/mediaQuery/Video.html
@@ -7,5 +7,7 @@
 	<video width="384px" height="288px" controls>
   		<source src="./FACEPALM.mp4" type="video/mp4">
 	</video>
+	<br><br><br>
+	<p align="center"><a href="javascript:history.back()">Go Back</a></p>
 </body>
 </html>
