First Website Upload

--- a/CV/CV.html
+++ b/CV/CV.html
@@ -161,7 +161,8 @@
 				<!-- <form>
 					<input type="button" value="Télécharger en PDF" onclick="window.location.href='https://github.com/OmarBouaouina/OmarBouaouina.github.io/blob/master/CV/Telecharger_PDF.php'" />
 				</form> -->
-				<button onclick="getPDF()">Telecharger</button>
+				<!-- <button onclick="getPDF()">Telecharger</button> -->
+				<a href="CV.pdf" target="_blank">Voir CV en PDF</a>
 			</div>
 			<div class="clear"></div>
 		</section>
