--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     body{
       background-color: #E4E4E4;
     }
+    .infos{
+      font-size: 20px;
+    }
   </style>
 	<script src="jquery-3.3.1.js"></script>
 	<script src="./bootstrap-3.3.7-dist/js/bootstrap.js"></script>
@@ -97,7 +100,14 @@
   		<div class="container">
     		<h1>Bienvenue!</h1>
   			<div><span><img class="ID" src="ID.png"></span><span><p>Voici un simple site web personnel, crée en Bootstrap et hébergé avec GitHub, dans lequel on trouve tous les exercices du cette période.</p></span></div>
-  			<p><a class="btn btn-primary btn-lg" href="./CV/CV.html" role="button">À propos de moi</a></p>
+        <div class="infos">
+          <ul>
+            <li>Omar Bouaouina</li>
+            <li>2ème Année Génie Informatique Groupe 2</li>
+            <li>omar-bouaouina@etudiant-enit.utm.tn</li>
+          </ul>
+        </div>
+  			<p><a class="btn btn-primary btn-lg" href="./CV/CV.html" role="button">Plus d'infos</a></p>
  		</div>
 	</div>
 </body>
